Fix copy icon not always appearing by converting visibility to opacity (apparently hover + invisible elements have weird behavior in safari)

--- a/src/Aspire.Dashboard/Components/Controls/GridValue.razor.css
+++ b/src/Aspire.Dashboard/Components/Controls/GridValue.razor.css
@@ -15,9 +15,10 @@
 }
 
 ::deep .defaultHidden {
-    visibility: hidden;
+    opacity: 0;
+    cursor: pointer;
 }
 
 ::deep:hover .defaultHidden {
-    visibility: visible;
+    opacity: 1;
 }
